// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/SettingItemMax should match snapshot 1`] = `
<DocumentFragment>
  <section
    class="section-max form-horizontal "
  >
    <h4
      class="col-sm-12 section-title"
      id="settingTitle"
    >
      title
    </h4>
    <div
      class="sectionContent col-sm-10 col-sm-offset-2"
    >
      <div
        class="setting-list"
        tabindex="-1"
      >
        <div
          class="setting-list-item"
        >
          input_1
        </div>
        <div
          class="setting-list-item"
        >
          <hr />
          <div
            role="alert"
          />
          <button
            class="btn btn-primary a11y--active a11y--focused"
            data-testid="saveSetting"
            id="saveSetting"
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
          <button
            class="btn btn-tertiary"
            data-testid="cancelButton"
            id="cancelSetting"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`components/SettingItemMax should match snapshot, on clientError 1`] = `
<DocumentFragment>
  <section
    class="section-max form-horizontal "
  >
    <h4
      class="col-sm-12 section-title"
      id="settingTitle"
    >
      title
    </h4>
    <div
      class="sectionContent col-sm-10 col-sm-offset-2"
    >
      <div
        class="setting-list"
        tabindex="-1"
      >
        <div
          class="setting-list-item"
        >
          input_1
        </div>
        <div
          class="setting-list-item"
        >
          <hr />
          <div
            role="alert"
          />
          <button
            class="btn btn-primary a11y--active a11y--focused"
            data-testid="saveSetting"
            id="saveSetting"
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
          <button
            class="btn btn-tertiary"
            data-testid="cancelButton"
            id="cancelSetting"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`components/SettingItemMax should match snapshot, on serverError 1`] = `
<DocumentFragment>
  <section
    class="section-max form-horizontal "
  >
    <h4
      class="col-sm-12 section-title"
      id="settingTitle"
    >
      title
    </h4>
    <div
      class="sectionContent col-sm-10 col-sm-offset-2"
    >
      <div
        class="setting-list"
        tabindex="-1"
      >
        <div
          class="setting-list-item"
        >
          input_1
        </div>
        <div
          class="setting-list-item"
        >
          <hr />
          <div
            role="alert"
          >
            <div
              class="form-group"
            >
              <label
                class="col-sm-12 has-error"
              >
                <i
                  class="icon icon-alert-circle-outline"
                  role="presentation"
                />
                <span
                  class="sr-only"
                >
                  Error
                </span>
                <span
                  id="serverError"
                >
                  serverError
                </span>
              </label>
            </div>
          </div>
          <button
            class="btn btn-primary a11y--active a11y--focused"
            data-testid="saveSetting"
            id="saveSetting"
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
          <button
            class="btn btn-tertiary"
            data-testid="cancelButton"
            id="cancelSetting"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`components/SettingItemMax should match snapshot, with new saveTextButton 1`] = `
<DocumentFragment>
  <section
    class="section-max form-horizontal "
  >
    <h4
      class="col-sm-12 section-title"
      id="settingTitle"
    >
      title
    </h4>
    <div
      class="sectionContent col-sm-10 col-sm-offset-2"
    >
      <div
        class="setting-list"
        tabindex="-1"
      >
        <div
          class="setting-list-item"
        >
          input_1
        </div>
        <div
          class="setting-list-item"
        >
          <hr />
          <div
            role="alert"
          />
          <button
            class="btn btn-primary "
            data-testid="saveSetting"
            id="saveSetting"
            type="submit"
          >
            <span>
              CustomText
            </span>
          </button>
          <button
            class="btn btn-tertiary"
            data-testid="cancelButton"
            id="cancelSetting"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`components/SettingItemMax should match snapshot, without submit 1`] = `
<DocumentFragment>
  <section
    class="section-max form-horizontal a11y--active a11y--focused"
  >
    <h4
      class="col-sm-12 section-title"
      id="settingTitle"
    >
      title
    </h4>
    <div
      class="sectionContent col-sm-10 col-sm-offset-2"
    >
      <div
        class="setting-list"
        tabindex="-1"
      >
        <div
          class="setting-list-item"
        >
          input_1
        </div>
        <div
          class="setting-list-item"
        >
          <hr />
          <div
            role="alert"
          />
          <button
            class="btn btn-tertiary"
            data-testid="cancelButton"
            id="cancelSetting"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
